base1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels: 
    type: web-app
spec: 
  containers:
    - name: pod-container
      image: nginx
